# create-janustack

./: .containerignore  .gitignore  .prototools  Cargo.toml  README.md  ai_prompt.md  bunfig.toml  create.ps1  gpt_prompt.md  moon.yml  package.json  text.txt  tsconfig.json  tsconfig.options.json
.cargo/: config.toml
.github/workflows/: ci.yml  containers.yml  docker.yml  release.yml
.moon/: tasks.yml  toolchain.yml  workspace.yml
.moon/tasks/: bun.yml  tag-napi.yml
apps/web/: package.json
containers/: aarch64-alpine.Containerfile  alpine-zig.Containerfile  alpine.Containerfile  debian-aarch64.Containerfile  debian-zig.Containerfile  debian.Containerfile  x86_64-debian.Containerfile  zig-aarch64-alpine.Containerfile  zig-aarch64-debian.Containerfile  zig-alpine.Containerfile  zig-debian.Containerfile  zig-x86_64-debian.Containerfile
crates/create/: Cargo.toml  moon.yml
crates/create-janustack/: Cargo.toml
crates/create-janustack/src/: args.rs  lib.rs  main.rs  package_manager.rs  template.rs
crates/create/src/: args.rs  lib.rs  main.rs  package_manager.rs  template.rs
crates/create/src/utils/: Ite.rs  lte.rs  prompts.rs  theme.rs
crates/create/templates/addons/biome/: biome.json
crates/create/templates/addons/moon/.moon/: workspace.yml
crates/create/templates/janext/: package.json  tsconfig.json
crates/create/templates/janudocs/react/: index.html  package.json  tsconfig.json  vite.config.ts
crates/create/templates/janudocs/solid/: package.json  tsconfig.json  vite.config.ts
crates/create/templates/janudocs/solid/src/routes/: __root.tsx  index.tsx
crates/create/templates/react/: package.json  tsconfig.json
crates/create/templates/solid/: tsconfig.json
docker/: alpine-zig.Dockerfile  alpine.Dockerfile  debian-aarch64.Dockerfile  debian-zig.Dockerfile  debian.Dockerfile
scripts/: clean.ts  create.ps1
templates/crate/: Cargo.toml  template.yml
templates/monorepo/: biome.json  moon.yml  package.json  template.yml  tsconfig.json  tsconfig.options.json
templates/monorepo/.moon/: tasks.yml  toolchain.yml  typescript-library.yml  workspace.yml
templates/npm-package/: package.json  template.yml
templates/package/: jsr.json  template.yml  tsconfig.json  tsdown.config.ts
(+19 files in other folders)
