[workspace]
members = ["crates/*", "packages/create"]
resolver = "3"

[workspace.package]
categories = ["gui"]
description = "Rapidly scaffold out a new Janustack project."
edition = "2024"
homepage = "https://github.com/janustack"
keywords=["cli", "janustack", "templates"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/janustack/create-janustack"