[package]
name = "create_janustack"
categories = ["cli"]
description = "Rapidly scaffold out a new Janustack project."
edition.workspace = true
homepage.workspace = true
keywords=["cli", "janustack", "templates"]
license.workspace = true
readme.workspace = true
repository.workspace = true
version = "0.1.0"

[[bin]]
name = "create_janustack"
path = "src/main.rs"

[dependencies]
anyhow = "1"
dialoguer = "0.11"
rust-embed = { version = "8.3", features = [
  "compression",
  "interpolate-folder-path",
] }
clap = { version = "4.5.8", features = ["derive"] }
