[package]
name = "create-janustack"
categories = ["gui"]
description = "Rapidly scaffold out a new Janustack project."
edition.workspace = true
homepage.workspace = true
keywords=["cli", "janustack", "templates"]
license.workspace = true
readme.workspace = true
repository.workspace = true
version = "0.1.1"

[[bin]]
name = "cargo-create-janustack"
path = "src/main.rs"

[dependencies]
anyhow = "1"
dialoguer = "0.11"
rust-embed = { version = "8.3", features = [
  "compression",
  "interpolate-folder-path",
] }
clap = { version = "4.5.8", features = ["derive"] }
